--- a/job/src/main/resources/templates/index.html
+++ b/job/src/main/resources/templates/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:margin="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Job Board</title>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
+
 <body>
 
-<h1>Job Board</h1>
-<div align="center"></div>
+
+<div style="width: 50%; margin: 0 auto;">
+
     <h1>Job List</h1>
-    <table border = "1">
+    <a th:href = "@{/addNew}" class = "btn btn-primary btn-sm mb-3"> Add Job </a>
+    <table border = "1" class = "table table-striped table-responsive-md">
         <thread>
             <tr>
                 <th>Occupation</th>
                 <th>Occupation Level</th>
                 <th>Annual Salary</th>
+                <th>Annual Salary Increase Graph</th>
 
             </tr>
         </thread>
         <tbody>
         <!-- Iterate through the list of jobs and display their info -->
-        <tr th:each="job : ${jobs}">
-            <td th:text="${job.occupation}"></td>
-            <td th:text="${job.occupationLevel}"></td>
-            <td th:text="${job.annualSalary}"></td>
+        <tr th:each="joblist : ${joblists}">
+            <td th:text="${joblist.occupation}"></td>
+            <td th:text="${joblist.occupationLevel}"></td>
+            <td th:text="${joblist.annualSalary}"></td>
 
+        </tr>
         </tbody>
     </table>
 
 
+
+</div>
 </body>
 </html>
